.labs/Local-Kubernetes/ml-pipeline/manifests/seldon-core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seldon-models
  namespace: seldon-models
spec:
  ingressClassName: traefik
  rules:
    - host: seldon.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wine-classifier-default
                port:
                  number: 8000
